==> joaogpd/BME280-MSP430FR59xx/BME280-MSP430FR59xx.cpp <==
#include <math.h>
#include "BME280-MSP430FR59xx.h"

uint8_t BME280::begin(void)
{
    // TODO: implement a function that delays while taking into account differing frequencies.
    // This current application assumes frequency is at 1MHz.
    _delay_cycles(2000);  // Make sure sensor had enough time to turn on. BME280 requires 2ms to start up.

    // Start the SPI library
    SPI_A3_init(EUSCI_A_SPI_CLOCKSOURCE_SMCLK, 1000000L,
                EUSCI_A_SPI_PHASE_DATA_CHANGED_ONFIRST_CAPTURED_ON_NEXT, 
                EUSCI_A_SPI_CLOCKPOLARITY_INACTIVITY_HIGH);

    // Initialize the chip select pin
    GPIO_setAsOutputPin(settings.csPort, settings.csPin);
    GPIO_setOutputHighOnPin(csPsettings.csPortort, settings.csPin);

    // Check communication with IC before anything else
    uint8_t chipID = readRegister(BME280_CHIP_ID_REG); //Should return 0x60 or 0x58
    if (chipID != 0x58 && chipID != 0x60) // Is this BMP or BME?
        return chipID; // This is not BMP nor BME!

    // Reading all compensation data, range 0x88:A1, 0xE1:E7
    calibration.dig_T1 = ((uint16_t)((readRegister(BME280_DIG_T1_MSB_REG) << 8) + readRegister(BME280_DIG_T1_LSB_REG)));
    calibration.dig_T2 = ((int16_t)((readRegister(BME280_DIG_T2_MSB_REG) << 8) + readRegister(BME280_DIG_T2_LSB_REG)));
    calibration.dig_T3 = ((int16_t)((readRegister(BME280_DIG_T3_MSB_REG) << 8) + readRegister(BME280_DIG_T3_LSB_REG)));

    calibration.dig_P1 = ((uint16_t)((readRegister(BME280_DIG_P1_MSB_REG) << 8) + readRegister(BME280_DIG_P1_LSB_REG)));
    calibration.dig_P2 = ((int16_t)((readRegister(BME280_DIG_P2_MSB_REG) << 8) + readRegister(BME280_DIG_P2_LSB_REG)));
    calibration.dig_P3 = ((int16_t)((readRegister(BME280_DIG_P3_MSB_REG) << 8) + readRegister(BME280_DIG_P3_LSB_REG)));
    calibration.dig_P4 = ((int16_t)((readRegister(BME280_DIG_P4_MSB_REG) << 8) + readRegister(BME280_DIG_P4_LSB_REG)));
    calibration.dig_P5 = ((int16_t)((readRegister(BME280_DIG_P5_MSB_REG) << 8) + readRegister(BME280_DIG_P5_LSB_REG)));
    calibration.dig_P6 = ((int16_t)((readRegister(BME280_DIG_P6_MSB_REG) << 8) + readRegister(BME280_DIG_P6_LSB_REG)));
    calibration.dig_P7 = ((int16_t)((readRegister(BME280_DIG_P7_MSB_REG) << 8) + readRegister(BME280_DIG_P7_LSB_REG)));
    calibration.dig_P8 = ((int16_t)((readRegister(BME280_DIG_P8_MSB_REG) << 8) + readRegister(BME280_DIG_P8_LSB_REG)));
    calibration.dig_P9 = ((int16_t)((readRegister(BME280_DIG_P9_MSB_REG) << 8) + readRegister(BME280_DIG_P9_LSB_REG)));

    calibration.dig_H1 = ((uint8_t)(readRegister(BME280_DIG_H1_REG)));
    calibration.dig_H2 = ((int16_t)((readRegister(BME280_DIG_H2_MSB_REG) << 8) + readRegister(BME280_DIG_H2_LSB_REG)));
    calibration.dig_H3 = ((uint8_t)(readRegister(BME280_DIG_H3_REG)));
    calibration.dig_H4 = ((int16_t)((readRegister(BME280_DIG_H4_MSB_REG) << 4) + (readRegister(BME280_DIG_H4_LSB_REG) & 0x0F)));
    calibration.dig_H5 = ((int16_t)((readRegister(BME280_DIG_H5_MSB_REG) << 4) + ((readRegister(BME280_DIG_H4_LSB_REG) >> 4) & 0x0F)));
    calibration.dig_H6 = ((int8_t)readRegister(BME280_DIG_H6_REG));

    //Most of the time the sensor will be init with default values
    //But in case user has old/deprecated code, use the settings.x values
    setStandbyTime(settings.tStandby);
    setFilter(settings.filter);
    setPressureOverSample(settings.pressOverSample); //Default of 1x oversample
    setHumidityOverSample(settings.humidOverSample); //Default of 1x oversample
    setTempOverSample(settings.tempOverSample); //Default of 1x oversample
    
    setMode(MODE_NORMAL); //Go!
    
    return readRegister(BME280_CHIP_ID_REG); //Should return 0x60
}

void BME280::readRegisterRegion(uint8_t *outputPointer, uint8_t offset, uint8_t length)
{
    // Take the chip select low to select the device
    GPIO_setOutputLowOnPin(settings.csPort, settings.csPin);
    // Send the device the register you want to read
    SPI_A3_sendRegisterReceiveData(offset | 0x80, outputPointer, length); //Ored with "read request" bit
    // Take the chip select high to de-select
    GPIO_setOutputHighOnPin(settings.csPort, settings.csPin);
}

void BME280::writeRegister(uint8_t offset, uint8_t dataToWrite)
{
    // Take the chip select low to select the device
    GPIO_setOutputLowOnPin(settings.csPort, settings.csPin);
    // Send the device the register you want to write to
    SPI_A3_sendByte(offset & 0x7F);
    // Send the data
    SPI_A3_sendByte(dataToWrite);
    // Take the chip select high to de-select
    GPIO_setOutputHighOnPin(settings.csPort, settings.csPin);
}
